<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100">

    <TextView
        android:id="@+id/solved"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_weight="4.5"
        android:background="@color/SBLUE"
        android:gravity="center_vertical"
        android:text="@string/해결한문제"
        android:textColor="@android:color/white"
        android:textSize="14dp"
        tools:ignore="SpUsage" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="90"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/no_quiz"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="100"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/현재해결한문제없음"
            android:textSize="20dp"
            android:visibility="gone"
            tools:ignore="NestedWeights,SpUsage" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvi"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="100"
            android:nestedScrollingEnabled="false"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/Carkviewline"
        android:orientation="horizontal"></LinearLayout>

    <TextView
        android:id="@+id/rate"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_weight="4.5"
        android:background="@color/SBLUE"
        android:gravity="center_vertical"
        android:text="@string/지역별달성률"
        android:textColor="@android:color/white"
        android:textSize="14dp"
        tools:ignore="SpUsage" />

</LinearLayout>