<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hbag.seoulhang.joinmanage_package.SettingActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:gravity="center_vertical|start"
        android:text="@string/Setting"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpUsage" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/setting_back_xm"
        android:orientation="vertical"
        android:weightSum="100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <LinearLayout
            android:id="@+id/lang_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:id="@+id/lang_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:gravity="center_vertical|start"
                android:text="@string/setting_lang"
                android:textColor="@android:color/black"
                android:textSize="18dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.173"
                tools:ignore="HardcodedText,SpUsage" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="70"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lang_text"
                app:layout_constraintVertical_bias="0.757">

                <RadioButton
                    android:id="@+id/ko"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:checked="true"
                    android:soundEffectsEnabled="true"
                    android:text="한국어"
                    android:textColor="@android:color/black"
                    android:textSize="14dp"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/eng_1"
                    app:layout_constraintTop_toTopOf="@+id/eng_1"
                    tools:ignore="HardcodedText,RtlHardcoded,SpUsage" />

                <RadioButton
                    android:id="@+id/eng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:soundEffectsEnabled="true"
                    android:text="English"
                    android:textColor="@android:color/black"
                    android:textSize="14dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lang_text"
                    app:layout_constraintVertical_bias="0.191"
                    tools:ignore="HardcodedText,RtlHardcoded,SpUsage" />

            </RadioGroup>

        </LinearLayout>

        <TextView
            android:id="@+id/lang_descrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/lang_lay"
            android:layout_alignStart="@+id/lang_lay"
            android:layout_below="@+id/lang_lay"
            android:text="@string/lang_descrip"
            android:textSize="12dp"
            tools:ignore="SpUsage" />

        <Switch
            android:id="@+id/auto_notice_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/lang_lay"
            android:layout_alignStart="@+id/lang_lay"
            android:layout_below="@+id/lang_descrip"
            android:layout_marginTop="16dp"
            android:switchMinWidth="60dp"
            android:switchPadding="30dp"
            android:text="@string/flip"
            android:textColor="@android:color/black"
            android:textSize="18dp"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/notice_descrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/lang_lay"
            android:layout_alignStart="@+id/lang_lay"
            android:layout_below="@+id/auto_notice_toggle"
            android:text="@string/notice_descrip"
            android:textSize="12dp"
            tools:ignore="SpUsage" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="17dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="10"
                android:background="@drawable/card_view_button"
                android:text="@string/취소"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/eng_1"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eng_1"
                app:layout_constraintVertical_bias="0.285"
                tools:ignore="ButtonStyle,HardcodedText,RtlHardcoded,SpUsage" />

            <Button
                android:id="@+id/commit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="10"
                android:background="@drawable/card_view_button"
                android:text="@string/확인"
                android:textColor="@color/white"
                android:textSize="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="@+id/korean"
                app:layout_constraintTop_toBottomOf="@+id/korean"
                app:layout_constraintVertical_bias="0.285"
                tools:ignore="ButtonStyle,HardcodedText,NestedWeights,SpUsage" />

        </LinearLayout>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
